--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.12
+      - name: Install Dev Dependencies
+        run: pip install -r requirements-dev.txt
       - name: Install Dependencies
         run: pip install -r requirements.txt
+      - name: Code Format Check
+        run: black . --config pyproject.toml --diff
       - name: Run Tests With pytest
         run: pytest ./tests/unit -vvv
