--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==3.0.3
 Flask-SQLAlchemy==3.1.1
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 Flask-Migrate==4.0.7
 python-dotenv==1.0.1
 bcrypt==4.2.1
 flask-jwt-extended==4.7.0
+uwsgi
